mergeserver/server/src/main/java/com/alipay/mile/server/T2/mileSqlConditionParser.java
// $ANTLR 3.4 E:\\workcode\\mile\\ctumile\\ctumile_killbug\\src\\mergeserver\\server\\src\\main\\java\\com\\alipay\\mile\\server\\T2\\mileSqlCondition.g 2012-05-15 17:23:39

package com.alipay.mile.server.T2;
import java.util.ArrayList;
import java.util.List;
import java.util.concurrent.atomic.AtomicInteger;

import org.antlr.runtime.BitSet;
import org.antlr.runtime.IntStream;
import org.antlr.runtime.MismatchedSetException;
import org.antlr.runtime.MismatchedTokenException;
import org.antlr.runtime.NoViableAltException;
import org.antlr.runtime.Parser;
import org.antlr.runtime.ParserRuleReturnScope;
import org.antlr.runtime.RecognitionException;
import org.antlr.runtime.RecognizerSharedState;
import org.antlr.runtime.Token;
import org.antlr.runtime.TokenStream;
import org.antlr.runtime.tree.CommonTreeAdaptor;
import org.antlr.runtime.tree.TreeAdaptor;

import com.alipay.mile.Constants;
import com.alipay.mile.Expression;
import com.alipay.mile.FieldDesc;
import com.alipay.mile.mileexception.SQLException;
import com.alipay.mile.server.query.ColumnExp;
import com.alipay.mile.server.query.FieldValuePair;
import com.alipay.mile.server.query.Statement;
import com.alipay.mile.server.query.TimeHint;
import com.alipay.mile.server.query.ValueDesc;
import com.alipay.mile.server.query.special.SpecifyQueryStatement;


@SuppressWarnings({"all", "warnings", "unchecked"})
public class mileSqlConditionParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "A", "AND", "ASTERISK", "B", "BACKSLASH", "BETWEEN", "BLOB", "C", "COMMA", "COMMENT", "CURRENT_TIMESTAMP", "D", "DOT", "E", "EQUALS", "F", "FLOAT", "FLOAT_EXP", "G", "GREATER", "GREATER_OR_EQ", "H", "I", "ID", "ID_CORE", "ID_PLAIN", "ID_START", "INDEXWHERE", "INTEGER", "J", "K", "L", "LESS", "LESS_OR_EQ", "LINE_COMMENT", "LPAREN", "LPAREN_SQUARE", "M", "N", "NOT_EQUALS2", "O", "OR", "P", "Q", "QUESTION", "QUOTE_DOUBLE", "QUOTE_SINGLE", "R", "RPAREN", "RPAREN_SQUARE", "S", "SEGHINT", "SEMI", "STRING", "STRING_CORE", "STRING_CORE_DOUBLE", "STRING_CORE_SINGLE", "STRING_DOUBLE", "STRING_ESCAPE_DOUBLE", "STRING_ESCAPE_SINGLE", "STRING_SINGLE", "T", "U", "UNDERSCORE", "UNIONHASH", "V", "W", "WHERE", "WS", "X", "Y", "Z"
    };

    public static final int EOF=-1;
    public static final int A=4;
    public static final int AND=5;
    public static final int ASTERISK=6;
    public static final int B=7;
    public static final int BACKSLASH=8;
    public static final int BETWEEN=9;
    public static final int BLOB=10;
    public static final int C=11;
    public static final int COMMA=12;
    public static final int COMMENT=13;
    public static final int CURRENT_TIMESTAMP=14;
    public static final int D=15;
    public static final int DOT=16;
    public static final int E=17;
    public static final int EQUALS=18;
    public static final int F=19;
    public static final int FLOAT=20;
    public static final int FLOAT_EXP=21;
    public static final int G=22;
    public static final int GREATER=23;
    public static final int GREATER_OR_EQ=24;
    public static final int H=25;
    public static final int I=26;
    public static final int ID=27;
    public static final int ID_CORE=28;
    public static final int ID_PLAIN=29;
    public static final int ID_START=30;
    public static final int INDEXWHERE=31;
    public static final int INTEGER=32;
    public static final int J=33;
    public static final int K=34;
    public static final int L=35;
    public static final int LESS=36;
    public static final int LESS_OR_EQ=37;
    public static final int LINE_COMMENT=38;
    public static final int LPAREN=39;
    public static final int LPAREN_SQUARE=40;
    public static final int M=41;
    public static final int N=42;
    public static final int NOT_EQUALS2=43;
    public static final int O=44;
    public static final int OR=45;
    public static final int P=46;
    public static final int Q=47;
    public static final int QUESTION=48;
    public static final int QUOTE_DOUBLE=49;
    public static final int QUOTE_SINGLE=50;
    public static final int R=51;
    public static final int RPAREN=52;
    public static final int RPAREN_SQUARE=53;
    public static final int S=54;
    public static final int SEGHINT=55;
    public static final int SEMI=56;
    public static final int STRING=57;
    public static final int STRING_CORE=58;
    public static final int STRING_CORE_DOUBLE=59;
    public static final int STRING_CORE_SINGLE=60;
    public static final int STRING_DOUBLE=61;
    public static final int STRING_ESCAPE_DOUBLE=62;
    public static final int STRING_ESCAPE_SINGLE=63;
    public static final int STRING_SINGLE=64;
    public static final int T=65;
    public static final int U=66;
    public static final int UNDERSCORE=67;
    public static final int UNIONHASH=68;
    public static final int V=69;
    public static final int W=70;
    public static final int WHERE=71;
    public static final int WS=72;
    public static final int X=73;
    public static final int Y=74;
    public static final int Z=75;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public mileSqlConditionParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public mileSqlConditionParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

protected TreeAdaptor adaptor = new CommonTreeAdaptor();

public void setTreeAdaptor(TreeAdaptor adaptor) {
    this.adaptor = adaptor;
}
public TreeAdaptor getTreeAdaptor() {
    return adaptor;
}
    public String[] getTokenNames() { return mileSqlConditionParser.tokenNames; }
    public String getGrammarFileName() { return "E:\\workcode\\mile\\ctumile\\ctumile_killbug\\src\\mergeserver\\server\\src\\main\\java\\com\\alipay\\mile\\server\\T2\\mileSqlCondition.g"; }


    	public Statement statement;
    	private AtomicInteger pamerIndex = new AtomicInteger(-1);
    	@Override
    	protected Object recoverFromMismatchedToken(IntStream input, int ttype, BitSet follow) throws RecognitionException {
    		RecognitionException e =new MismatchedTokenException(ttype, input);
    		throw new SQLException("\t\n"+e.input.toString() +"\t\n"+getErrorHeader(e)+ " " + getErrorMessage(e, tokenNames) ) ;
    	}

    	@Override
    	public Object recoverFromMismatchedSet(IntStream input, RecognitionException e, BitSet follow) throws RecognitionException {
    		throw e;
    	}


    public static class sql_stmt_return extends ParserRuleReturnScope {
        public Statement statement;
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "sql_stmt"
    // E:\\workcode\\mile\\ctumile\\ctumile_killbug\\src\\mergeserver\\server\\src\\main\\java\\com\\alipay\\mile\\server\\T2\\mileSqlCondition.g:51:1: sql_stmt returns [Statement statement] : sql_stmt_core EOF !;
    public final mileSqlConditionParser.sql_stmt_return sql_stmt() throws RecognitionException {
        mileSqlConditionParser.sql_stmt_return retval = new mileSqlConditionParser.sql_stmt_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token EOF2=null;
        mileSqlConditionParser.sql_stmt_core_return sql_stmt_core1 =null;


        Object EOF2_tree=null;

        try {
            // E:\\workcode\\mile\\ctumile\\ctumile_killbug\\src\\mergeserver\\server\\src\\main\\java\\com\\alipay\\mile\\server\\T2\\mileSqlCondition.g:52:2: ( sql_stmt_core EOF !)
            // E:\\workcode\\mile\\ctumile\\ctumile_killbug\\src\\mergeserver\\server\\src\\main\\java\\com\\alipay\\mile\\server\\T2\\mileSqlCondition.g:52:4: sql_stmt_core EOF !
            {
            root_0 = (Object)adaptor.nil();


            pushFollow(FOLLOW_sql_stmt_core_in_sql_stmt77);
            sql_stmt_core1=sql_stmt_core();

            state._fsp--;

            adaptor.addChild(root_0, sql_stmt_core1.getTree());

            EOF2=(Token)match(input,EOF,FOLLOW_EOF_in_sql_stmt79); 

            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }

        	catch (RecognitionException el) {
        		throw el;
        	}

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "sql_stmt"


    public static class sql_stmt_core_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "sql_stmt_core"
    // E:\\workcode\\mile\\ctumile\\ctumile_killbug\\src\\mergeserver\\server\\src\\main\\java\\com\\alipay\\mile\\server\\T2\\mileSqlCondition.g:55:1: sql_stmt_core : condition_stmt[st] ;
    public final mileSqlConditionParser.sql_stmt_core_return sql_stmt_core() throws RecognitionException {
        mileSqlConditionParser.sql_stmt_core_return retval = new mileSqlConditionParser.sql_stmt_core_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        mileSqlConditionParser.condition_stmt_return condition_stmt3 =null;



        try {
            // E:\\workcode\\mile\\ctumile\\ctumile_killbug\\src\\mergeserver\\server\\src\\main\\java\\com\\alipay\\mile\\server\\T2\\mileSqlCondition.g:56:2: ( condition_stmt[st] )
            // E:\\workcode\\mile\\ctumile\\ctumile_killbug\\src\\mergeserver\\server\\src\\main\\java\\com\\alipay\\mile\\server\\T2\\mileSqlCondition.g:57:2: condition_stmt[st]
            {
            root_0 = (Object)adaptor.nil();



            		SpecifyQueryStatement st = new SpecifyQueryStatement();
            		statement = st;
            	

            pushFollow(FOLLOW_condition_stmt_in_sql_stmt_core95);
            condition_stmt3=condition_stmt(st);

            state._fsp--;

            adaptor.addChild(root_0, condition_stmt3.getTree());

            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }

        	catch (RecognitionException el) {
        		throw el;
        	}

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "sql_stmt_core"


    public static class condition_stmt_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "condition_stmt"
    // E:\\workcode\\mile\\ctumile\\ctumile_killbug\\src\\mergeserver\\server\\src\\main\\java\\com\\alipay\\mile\\server\\T2\\mileSqlCondition.g:64:1: condition_stmt[SpecifyQueryStatement specifyQueryStatement] : ( SEGHINT seg_hint= seghint_expr )? INDEXWHERE hash_Where= expr ( WHERE filterWhere= expr )? ;
    public final mileSqlConditionParser.condition_stmt_return condition_stmt(SpecifyQueryStatement specifyQueryStatement) throws RecognitionException {
        mileSqlConditionParser.condition_stmt_return retval = new mileSqlConditionParser.condition_stmt_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token SEGHINT4=null;
        Token INDEXWHERE5=null;
        Token WHERE6=null;
        mileSqlConditionParser.seghint_expr_return seg_hint =null;

        mileSqlConditionParser.expr_return hash_Where =null;

        mileSqlConditionParser.expr_return filterWhere =null;


        Object SEGHINT4_tree=null;
        Object INDEXWHERE5_tree=null;
        Object WHERE6_tree=null;

        try {
            // E:\\workcode\\mile\\ctumile\\ctumile_killbug\\src\\mergeserver\\server\\src\\main\\java\\com\\alipay\\mile\\server\\T2\\mileSqlCondition.g:65:2: ( ( SEGHINT seg_hint= seghint_expr )? INDEXWHERE hash_Where= expr ( WHERE filterWhere= expr )? )
            // E:\\workcode\\mile\\ctumile\\ctumile_killbug\\src\\mergeserver\\server\\src\\main\\java\\com\\alipay\\mile\\server\\T2\\mileSqlCondition.g:66:2: ( SEGHINT seg_hint= seghint_expr )? INDEXWHERE hash_Where= expr ( WHERE filterWhere= expr )?
            {
            root_0 = (Object)adaptor.nil();


            // E:\\workcode\\mile\\ctumile\\ctumile_killbug\\src\\mergeserver\\server\\src\\main\\java\\com\\alipay\\mile\\server\\T2\\mileSqlCondition.g:66:2: ( SEGHINT seg_hint= seghint_expr )?
            int alt1=2;
            int LA1_0 = input.LA(1);

            if ( (LA1_0==SEGHINT) ) {
                alt1=1;
            }
            switch (alt1) {
                case 1 :
                    // E:\\workcode\\mile\\ctumile\\ctumile_killbug\\src\\mergeserver\\server\\src\\main\\java\\com\\alipay\\mile\\server\\T2\\mileSqlCondition.g:66:3: SEGHINT seg_hint= seghint_expr
                    {
                    SEGHINT4=(Token)match(input,SEGHINT,FOLLOW_SEGHINT_in_condition_stmt112); 
                    SEGHINT4_tree = 
                    (Object)adaptor.create(SEGHINT4)
                    ;
                    adaptor.addChild(root_0, SEGHINT4_tree);


                    pushFollow(FOLLOW_seghint_expr_in_condition_stmt118);
                    seg_hint=seghint_expr();

                    state._fsp--;

                    adaptor.addChild(root_0, seg_hint.getTree());

                    specifyQueryStatement.hint = seg_hint.hint;

                    }
                    break;

            }


            INDEXWHERE5=(Token)match(input,INDEXWHERE,FOLLOW_INDEXWHERE_in_condition_stmt125); 
            INDEXWHERE5_tree = 
            (Object)adaptor.create(INDEXWHERE5)
            ;
            adaptor.addChild(root_0, INDEXWHERE5_tree);


            pushFollow(FOLLOW_expr_in_condition_stmt132);
            hash_Where=expr();

            state._fsp--;

            adaptor.addChild(root_0, hash_Where.getTree());

            specifyQueryStatement.hashWhere = hash_Where.expression;

            // E:\\workcode\\mile\\ctumile\\ctumile_killbug\\src\\mergeserver\\server\\src\\main\\java\\com\\alipay\\mile\\server\\T2\\mileSqlCondition.g:68:2: ( WHERE filterWhere= expr )?
            int alt2=2;
            int LA2_0 = input.LA(1);

            if ( (LA2_0==WHERE) ) {
                alt2=1;
            }
            switch (alt2) {
                case 1 :
                    // E:\\workcode\\mile\\ctumile\\ctumile_killbug\\src\\mergeserver\\server\\src\\main\\java\\com\\alipay\\mile\\server\\T2\\mileSqlCondition.g:68:3: WHERE filterWhere= expr
                    {
                    WHERE6=(Token)match(input,WHERE,FOLLOW_WHERE_in_condition_stmt137); 
                    WHERE6_tree = 
                    (Object)adaptor.create(WHERE6)
                    ;
                    adaptor.addChild(root_0, WHERE6_tree);


                    pushFollow(FOLLOW_expr_in_condition_stmt143);
                    filterWhere=expr();

                    state._fsp--;

                    adaptor.addChild(root_0, filterWhere.getTree());

                    specifyQueryStatement.filterWhere = filterWhere.expression;

                    }
                    break;

            }


            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }

        	catch (RecognitionException el) {
        		throw el;
        	}

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "condition_stmt"


    public static class seghint_expr_return extends ParserRuleReturnScope {
        public TimeHint hint = new TimeHint();
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "seghint_expr"
    // E:\\workcode\\mile\\ctumile\\ctumile_killbug\\src\\mergeserver\\server\\src\\main\\java\\com\\alipay\\mile\\server\\T2\\mileSqlCondition.g:72:1: seghint_expr returns [TimeHint hint = new TimeHint()] : LPAREN startCreateTime= INTEGER COMMA endCreateTime= INTEGER COMMA startUpdateTime= INTEGER COMMA endUpdateTime= INTEGER RPAREN ;
    public final mileSqlConditionParser.seghint_expr_return seghint_expr() throws RecognitionException {
        mileSqlConditionParser.seghint_expr_return retval = new mileSqlConditionParser.seghint_expr_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token startCreateTime=null;
        Token endCreateTime=null;
        Token startUpdateTime=null;
        Token endUpdateTime=null;
        Token LPAREN7=null;
        Token COMMA8=null;
        Token COMMA9=null;
        Token COMMA10=null;
        Token RPAREN11=null;

        Object startCreateTime_tree=null;
        Object endCreateTime_tree=null;
        Object startUpdateTime_tree=null;
        Object endUpdateTime_tree=null;
        Object LPAREN7_tree=null;
        Object COMMA8_tree=null;
        Object COMMA9_tree=null;
        Object COMMA10_tree=null;
        Object RPAREN11_tree=null;

        try {
            // E:\\workcode\\mile\\ctumile\\ctumile_killbug\\src\\mergeserver\\server\\src\\main\\java\\com\\alipay\\mile\\server\\T2\\mileSqlCondition.g:73:2: ( LPAREN startCreateTime= INTEGER COMMA endCreateTime= INTEGER COMMA startUpdateTime= INTEGER COMMA endUpdateTime= INTEGER RPAREN )
            // E:\\workcode\\mile\\ctumile\\ctumile_killbug\\src\\mergeserver\\server\\src\\main\\java\\com\\alipay\\mile\\server\\T2\\mileSqlCondition.g:73:4: LPAREN startCreateTime= INTEGER COMMA endCreateTime= INTEGER COMMA startUpdateTime= INTEGER COMMA endUpdateTime= INTEGER RPAREN
            {
            root_0 = (Object)adaptor.nil();


            LPAREN7=(Token)match(input,LPAREN,FOLLOW_LPAREN_in_seghint_expr162); 
            LPAREN7_tree = 
            (Object)adaptor.create(LPAREN7)
            ;
            adaptor.addChild(root_0, LPAREN7_tree);


            startCreateTime=(Token)match(input,INTEGER,FOLLOW_INTEGER_in_seghint_expr166); 
            startCreateTime_tree = 
            (Object)adaptor.create(startCreateTime)
            ;
            adaptor.addChild(root_0, startCreateTime_tree);


            COMMA8=(Token)match(input,COMMA,FOLLOW_COMMA_in_seghint_expr168); 
            COMMA8_tree = 
            (Object)adaptor.create(COMMA8)
            ;
            adaptor.addChild(root_0, COMMA8_tree);


            endCreateTime=(Token)match(input,INTEGER,FOLLOW_INTEGER_in_seghint_expr172); 
            endCreateTime_tree = 
            (Object)adaptor.create(endCreateTime)
            ;
            adaptor.addChild(root_0, endCreateTime_tree);


            COMMA9=(Token)match(input,COMMA,FOLLOW_COMMA_in_seghint_expr174); 
            COMMA9_tree = 
            (Object)adaptor.create(COMMA9)
            ;
            adaptor.addChild(root_0, COMMA9_tree);


            startUpdateTime=(Token)match(input,INTEGER,FOLLOW_INTEGER_in_seghint_expr178); 
            startUpdateTime_tree = 
            (Object)adaptor.create(startUpdateTime)
            ;
            adaptor.addChild(root_0, startUpdateTime_tree);


            COMMA10=(Token)match(input,COMMA,FOLLOW_COMMA_in_seghint_expr180); 
            COMMA10_tree = 
            (Object)adaptor.create(COMMA10)
            ;
            adaptor.addChild(root_0, COMMA10_tree);


            endUpdateTime=(Token)match(input,INTEGER,FOLLOW_INTEGER_in_seghint_expr184); 
            endUpdateTime_tree = 
            (Object)adaptor.create(endUpdateTime)
            ;
            adaptor.addChild(root_0, endUpdateTime_tree);


            RPAREN11=(Token)match(input,RPAREN,FOLLOW_RPAREN_in_seghint_expr186); 
            RPAREN11_tree = 
            (Object)adaptor.create(RPAREN11)
            ;
            adaptor.addChild(root_0, RPAREN11_tree);



            		retval.hint.startCreateTime = Long.parseLong(startCreateTime.getText().trim());
            		retval.hint.endCreateTime = Long.parseLong(endCreateTime.getText().trim());
            		retval.hint.startUpdateTime = Long.parseLong(startUpdateTime.getText().trim());
            		retval.hint.endUpdateTime = Long.parseLong(endUpdateTime.getText().trim());
            	

            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }

        	catch (RecognitionException el) {
        		throw el;
        	}

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "seghint_expr"


    public static class expr_return extends ParserRuleReturnScope {
        public Expression expression;
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "expr"
    // E:\\workcode\\mile\\ctumile\\ctumile_killbug\\src\\mergeserver\\server\\src\\main\\java\\com\\alipay\\mile\\server\\T2\\mileSqlCondition.g:83:1: expr returns [Expression expression] : or_sub= or_subexpr ( OR or_sub= or_subexpr )* ;
    public final mileSqlConditionParser.expr_return expr() throws RecognitionException {
        mileSqlConditionParser.expr_return retval = new mileSqlConditionParser.expr_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token OR12=null;
        mileSqlConditionParser.or_subexpr_return or_sub =null;


        Object OR12_tree=null;

        try {
            // E:\\workcode\\mile\\ctumile\\ctumile_killbug\\src\\mergeserver\\server\\src\\main\\java\\com\\alipay\\mile\\server\\T2\\mileSqlCondition.g:84:2: (or_sub= or_subexpr ( OR or_sub= or_subexpr )* )
            // E:\\workcode\\mile\\ctumile\\ctumile_killbug\\src\\mergeserver\\server\\src\\main\\java\\com\\alipay\\mile\\server\\T2\\mileSqlCondition.g:84:4: or_sub= or_subexpr ( OR or_sub= or_subexpr )*
            {
            root_0 = (Object)adaptor.nil();


            pushFollow(FOLLOW_or_subexpr_in_expr209);
            or_sub=or_subexpr();

            state._fsp--;

            adaptor.addChild(root_0, or_sub.getTree());


            		retval.expression =or_sub.expression;
            	

            // E:\\workcode\\mile\\ctumile\\ctumile_killbug\\src\\mergeserver\\server\\src\\main\\java\\com\\alipay\\mile\\server\\T2\\mileSqlCondition.g:88:2: ( OR or_sub= or_subexpr )*
            loop3:
            do {
                int alt3=2;
                int LA3_0 = input.LA(1);
